--- a/index.html
+++ b/index.html
@@ -22,7 +22,114 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/styles.css" />
-    nk
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Kate Rohlfs</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html#contact">Contact me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Navbar -->
+
+    <h2>👋 Hi I am</h2>
+    <h1>Ketchadapron Rohlfs</h1>
+    <h3>Front-end developer, based in USA</h3>
+    <div class="navigation-links">
+      <a href="about.html#contact" class="contact-link" title="Contact me"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="About me">About me</a>
+    </div>
+
+    <!-- project -->
+
+    <div class="container">
+      <div class="row m-4">
+        <div class="col-md-6">
+          <img
+            class="img-fluid rounded"
+            src="https://31ukq.codesandbox.io/images/yoga.png"
+            alt="yoga"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2 class="text-start mb-3">Yoga app</h2>
+          <p class="text-start paragraph mb-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <a href="#" class="primary-link">Launch Yoga App</a>
+        </div>
+      </div>
+
+      <div class="row m-4 mt-5">
+        <div class="col-md-6 mb-5">
+          <h2 class="text-start mb-3">Weather app</h2>
+          <p class="text-start paragraph mb-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <a href="#" class="primary-link">Launch Weather App</a>
+        </div>
+        <div class="col-md-6">
+          <img
+            class="img-fluid rounded"
+            src="https://31ukq.codesandbox.io/images/weather.png"
+            alt="weather"
+          />
+        </div>
+      </div>
+
+      <div class="row m-4 mt-5">
+        <div class="col-md-6">
+          <img
+            class="img-fluid rounded"
+            src="https://31ukq.codesandbox.io/images/yogurt.png"
+            alt="yogurt"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2 class="text-start mb-3">Yogurt app</h2>
+          <p class="text-start paragraph mb-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <a href="#" class="primary-link">Launch Yogurt App</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
