--- a/about.html
+++ b/about.html
@@ -22,5 +22,86 @@
 
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Kate Rohlfs</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html#contact">Contact me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Navbar -->
+
+    <h1>About me</h1>
+    <h3>Front-end developer from Chicago, USA</h3>
+
+    <div class="about-paragraphs text-center">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+      </p>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img
+            class="img-fluid p-2 shadow rounded display"
+            src="https://31ukq.codesandbox.io/images/yoga.png"
+            alt="yoga"
+          />
+        </div>
+
+        <div class="col-sm-4">
+          <img
+            class="img-fluid p-2 shadow rounded display"
+            src="https://31ukq.codesandbox.io/images/weather.png"
+            alt="weather"
+          />
+        </div>
+
+        <div class="col-sm-4">
+          <img
+            class="img-fluid p-2 shadow rounded display"
+            src="https://31ukq.codesandbox.io/images/yogurt.png"
+            alt="yogurt"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div id="contact" class="mt-5 mb-5">
+      <h2>📮 Contact me</h2>
+      <a href="mailto:ketchadapron.s@gmail.com" class="email-link"
+        >ketchadapron.s@gmail.com</a
+      >
+    </div>
+  </body>
 </html>
