--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="index.html">Kate Rohlfs</a>
         <button
           class="navbar-toggler"
@@ -41,15 +41,23 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="home page"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About me"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="about.html#contact" title="Contact me"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -71,27 +79,27 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4 mb-4">
           <img
             class="img-fluid p-2 shadow rounded display"
             src="https://31ukq.codesandbox.io/images/yoga.png"
-            alt="yoga"
+            alt="yoga project"
           />
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-4 mb-4">
           <img
             class="img-fluid p-2 shadow rounded display"
             src="https://31ukq.codesandbox.io/images/weather.png"
-            alt="weather"
+            alt="weather project"
           />
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-4 mb-4">
           <img
             class="img-fluid p-2 shadow rounded display"
             src="https://31ukq.codesandbox.io/images/yogurt.png"
-            alt="yogurt"
+            alt="yogurt project"
           />
         </div>
       </div>
