--- a/index.html
+++ b/index.html
@@ -42,15 +42,23 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="home page"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About me"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="about.html#contact" title="Contact me"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -87,7 +95,9 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="#" class="primary-link">Launch Yoga App</a>
+          <a href="#" class="primary-link project-link" title="Yoga project"
+            >Launch Yoga App</a
+          >
         </div>
       </div>
 
@@ -100,7 +110,9 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="#" class="primary-link">Launch Weather App</a>
+          <a href="#" class="primary-link project-link" title="Weather project"
+            >Launch Weather App</a
+          >
         </div>
         <div class="col-md-6">
           <img
@@ -127,7 +139,9 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="#" class="primary-link">Launch Yogurt App</a>
+          <a href="#" class="primary-link project-link" title="Yogurt project"
+            >Launch Yogurt App</a
+          >
         </div>
       </div>
     </div>
